--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,13 @@ services:
       - ./server:/app
     ports:
       - "5000:5000"
+    environment:
+      - PGUSER=postgres
+      - PGHOST=postgres
+      - PGDATABASE=postgres
+      - PGPASSWORD=postgres_password
+      - PGPORT=5432
+  postgres:
+    image: "postgres:latest"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
