--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.2",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "pg": "^7.11.0"
+    "pg": "^7.11.0",
+    "validator": "^11.0.0"
   }
 }
