--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,12 @@ services:
     image: "mongo:latest"
     volumes:
       - ./mongo-data:/data/db
+  client:
+    build:
+      dockerfile: Dockerfile.dev
+      context: ./client
+    ports:
+      - "3000:3000"
+    volumes:
+      - /app/node_modules
+      - ./client:/app
